[package]
name = "async-reply"
version = "0.1.0"
authors = ["Jonathas-Conceicao <jonathas.conceicao@ossystems.com.br>"]
edition = "2018"

[dependencies]
async-std = { version = "1", features = ["unstable"] }
derive_more = { version = "0.99", default-features = false, features = ["display", "error", "from"] }

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
